welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:6: error: not found: value n
for (i<- 2 to n) {
              ^